fix color contrast on h2 and update head

--- a/lesson02/styles/base.css
+++ b/lesson02/styles/base.css
@@ -16,7 +16,7 @@ body {
 
 h2 {
     color: #fff;
-    background-color: #6285aa;
+    background-color: #0a2e55;
     padding: 10px;
 }
 
